More clean up of reservation lookup and fixed layout issue with reservation page caused by css delete oops sorry

--- a/Pages/mbl.css
+++ b/Pages/mbl.css
@@ -254,7 +254,7 @@ p.success {
   color: #CEC2B8;
 }
 
-#fields-container {
+#fields-container, .res-fields {
   display: inline-block;
 }
 
